feat: cordova and capacitor plugins test

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,5 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true"
+            color="primary">
     <ion-toolbar>
         <ion-title>Blank </ion-title>
     </ion-toolbar>
@@ -9,9 +10,10 @@
             <ion-title size="large">Blank</ion-title>
         </ion-toolbar>
     </ion-header>
-    <div id="container"><strong>Ready to create an app?</strong>
-        <p>Start with Ionic <a target="_blank"
-               rel="noopener noreferrer"
-               href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div id="container">
+        <ion-button href="capacitor-navigation"
+                    color="primary">Navigation Capacitor</ion-button>
+        <ion-button href="cordova-navigation"
+                    color="secondary">Navigation Cordova</ion-button>
     </div>
 </ion-content>
